# ai-fraud-detection-service

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/routes/: fraud.py  health.py
app/core/: config.py
app/schemas/: fraud.py
app/services/fraud_scoring/: fraud_scoring_service.py
app/services/rules_engine/: fraud_rules.py
